--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,8 +3,7 @@ spring:
     url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
     username: ${PGUSER}
     password: ${PGPASSWORD}
-    cors:
-      allowed-origins: "https://markup-landing.vercel.app/"
+
 
   jpa:
     hibernate:
@@ -14,6 +13,11 @@ spring:
 server:
   port: ${PORT}
 
+cors:
+  allowed-origins: "https://markup-landing.vercel.app,https://markup-project-tan.vercel.app"
+  allowed-methods: "*"
+  allowed-headers: "*"
+  allow-credentials: true
 
 jwt:
   secret: ${JWT_SECRET}
