--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ server:
   port: 8081
 
 cors:
-  allowed-origins: "https://markup-project-tan.vercel.app"
+  allowed-origins: "https://markup-landing.vercel.app"
 
 springdoc:
   api-docs.path: /v3/api-docs
