--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,10 +12,10 @@ spring:
 
   web:
     cors:
-      allowed-origins: "https://markup-landing.vercel.app/"
-      allowed-methods: "*"
-      allowed-headers: "*"
-      allow-credentials: true
+      allowed-origins:
+        - "http://localhost:5173"
+        - "http://localhost:5174"
+        - "https://markup-landing.vercel.app"
 
 jwt:
   secret: "mi-super-secret-key-para-desarrollo-con-minimo-32-caracteres-de-longitud"
